[package]
name = "mumblelink_reader"
description = "Mumblelink reader for Windows & Unix based operating systems"
version = "0.3.4"
authors=["kakste.norberts@gmail.com"]
edition = "2018"
license-file = "LICENSE"
keywords = ["mumble", "mumblelink", "unsafe", "game"]
repository = "https://github.com/norbert-k/mumblelink_reader"
maintenance = { status = "actively-developed" }

[lib]
name = "mumblelink_reader"
path = "src/lib.rs"
doc = true

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu", "x86_64-apple-darwin"]

[dependencies]
libc = "0.2.101"
lazy_static = "1.4.0"
thiserror = "1.0"
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "winnt", "minwindef", "handleapi"] }